force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/ucinn_portal_Volunteer_Shift__c.object-meta.xml
<CustomObject>
    <label>Volunteer Shift</label>
    <nameField>
        <label>Volunteer Shift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>