force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Available_Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Available_Number_of_Volunteers__c</fullName>
    <formula>IF(ISBLANK(Maximum_Number_of_Volunteers__c), null, Maximum_Number_of_Volunteers__c - Total_Number_of_Volunteers__c)</formula>
    <label>Available Number of Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>