force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Duration_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Hours__c</fullName>
    <formula>(End_Date_Time__c-Start_Date_Time__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration In Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>