force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Maximum_Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Volunteers__c</fullName>
    <label>Maximum Number of Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>