force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Reminder_Email_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Date_Time__c</fullName>
    <label>Reminder Email Date/Time</label>
    <type>DateTime</type>
</CustomField>