force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Reminder_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Template__c</fullName>
    <label>Reminder Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>