force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Report_Hours_Cut_Off_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Report_Hours_Cut_Off_Date_Time__c</fullName>
    <label>Report Hours Cut Off Date/Time</label>
    <type>DateTime</type>
</CustomField>