force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Total_Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Volunteers__c</fullName>
    <label>Total Number of Volunteers</label>
    <summaryFilterItems>
        <field>ucinn_portal_Volunteer__c.Application_Status__c</field>
        <operation>contains</operation>
        <value>Pending, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ucinn_portal_Volunteer__c.Volunteer_Shift__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>