force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/fields/Volunteer_Job__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Job__c</fullName>
    <label>Volunteer Job</label>
    <referenceTo>ucinn_portal_Volunteer_Job__c</referenceTo>
    <relationshipLabel>Volunteer Shifts</relationshipLabel>
    <relationshipName>ucinn_portal_Volunteer_Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>