force-app/main/default/objects/ucinn_portal_Volunteer_Shift__c/validationRules/Actual_Start_Date_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Start_Date_Format</fullName>
    <active>true</active>
    <description>Actual start date format is not correct, a correct example is 2025-12-13 08:00:00</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Actual_Start_Date_Time__c)),
NOT(REGEX(Actual_Start_Date_Time__c, &quot;\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Actual_Start_Date_Time__c</errorDisplayField>
    <errorMessage>Actual start date format is not correct, a correct example is 2025-12-13 08:00:00</errorMessage>
</ValidationRule>